[gd_scene load_steps=6 format=3 uid="uid://b4a1ay8nyjqtr"]

[ext_resource type="Script" path="res://upgrades_shop.gd" id="1_lwpen"]
[ext_resource type="Texture2D" uid="uid://71u4vsyuaaa6" path="res://Images/upgrade_bg.png" id="2_71xr7"]
[ext_resource type="PackedScene" uid="uid://0l0fa8uw6m3t" path="res://UI/money.tscn" id="2_kmo21"]
[ext_resource type="PackedScene" uid="uid://cap511ut66dq6" path="res://UI/shop_item.tscn" id="3_ftk5n"]
[ext_resource type="Texture2D" uid="uid://c1ucdb83635ju" path="res://Images/upgrade_table.png" id="3_vrta6"]

[node name="Upgrades" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lwpen")

[node name="Visuals" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BG" type="TextureRect" parent="Visuals"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_71xr7")

[node name="Table" type="TextureRect" parent="Visuals"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_vrta6")

[node name="Money" parent="." instance=ExtResource("2_kmo21")]
layout_mode = 1
offset_left = -300.0
offset_bottom = 100.0

[node name="ShopItem" parent="." instance=ExtResource("3_ftk5n")]
offset_left = 218.0
offset_top = 112.0
offset_right = 218.0
offset_bottom = 112.0

[node name="ShopItem2" parent="." instance=ExtResource("3_ftk5n")]
offset_left = 481.0
offset_top = 111.0
offset_right = 481.0
offset_bottom = 111.0

[node name="Recipe1" parent="." instance=ExtResource("3_ftk5n")]
offset_left = 327.0
offset_top = 271.0
offset_right = 327.0
offset_bottom = 271.0

[node name="Recipe2" parent="." instance=ExtResource("3_ftk5n")]
offset_left = 478.0
offset_top = 434.0
offset_right = 478.0
offset_bottom = 434.0

[node name="CloseShop" type="Button" parent="."]
layout_mode = 0
offset_left = 558.0
offset_top = 475.0
offset_right = 956.0
offset_bottom = 538.0
theme_override_font_sizes/font_size = 40
text = "ENOUGH SHOPPING"

[connection signal="pressed" from="CloseShop" to="." method="_on_close_shop_pressed"]
